@@ -76,9 +76,9 @@ public class MockInputStream
     public void read(byte[] buffer, int offset, int length, int retVal,
             Exception e)
     {
-        Object[] args = new Object[] {buffer, new Integer(offset), 
-                new Integer(length)};
-        MockedCall mc = new MockedCall(read3, args, new Integer(retVal));
+        Object[] args = new Object[] {buffer, Integer.valueOf(offset), 
+        		Integer.valueOf(length)};
+        MockedCall mc = new MockedCall(read3, args, Integer.valueOf(retVal));
         if (e != null) mc.setException(e);
         mockSupport.add(mc);
     }
@@ -89,9 +89,9 @@ public class MockInputStream
     public int read(byte[] buffer, int offset, int length)
         throws IOException
     {
-        Object[] args = new Object[] {buffer, new Integer(offset), 
-                new Integer(length)};
-        MockedCall mc = new MockedCall(read3, args, new Integer(0));
+        Object[] args = new Object[] {buffer, Integer.valueOf(offset), 
+        		Integer.valueOf(length)};
+        MockedCall mc = new MockedCall(read3, args, Integer.valueOf(0));
         mc = mockSupport.verifyCall(mc);
         if (mc.hasException()) {
             Exception e = (Exception) mc.getException();
